<resources>
    <string name="app_name">IOT_Final_Project</string>
    <string name="testbutton">TestButton</string>
    <string name="button">Log Out</string>
    <string name="Register_Button">Register</string>
    <string name="Login_button">Login</string>
    <string name="reset_button">Reset</string>
    <string name="senseText">49er Sense</string>
    <string name="user_name_ip">Enter User Name</string>
    <string name="enter_password_ip">Enter Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="power_generators">Power Generators</string>
    <string name="go_back">Go Back</string>
    <string name="register">Register</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="utility_company">Utility Company</string>
    <string name="home_user">Home User</string>
    <string name="enter_first_middle_last_name">Enter First Middle Last Name</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="view_appliances">View Appliances</string>
    <string name="manage_account">Manage Account</string>
    <string name="view_home_activity">View Home Activity</string>
    <string name="view_generators">View Generators</string>
    <string name="market">Market</string>
    <string name="manage_generators">Manage Generators</string>
    <string name="textview">TextView</string>
    <string name="light_switch">light_switch</string>
    <string name="BackButton">Button</string>
    <string name="dryerswitch">dryerswitch</string>
    <string name="fridgeswitch">fridgeswitch</string>
    <string name="washerswitch">washerswitch</string>
    <string name="livingswitch">livingswitch</string>
    <string name="officeswitch">officeswitch</string>
    <string name="masterswitch">masterswitch</string>
    <string name="log_out">log out</string>
    <string name="CurrentMarket">TextView</string>
    <string name="GoBackButton">Button</string>
    <string name="ManageGenerators">ManageGenerators</string>
    <string name="update_password">Update Password</string>
    <string name="ManageAccount">TextView</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="update_phone">Update Phone #</string>
    <string name="update_email_address">Update Email Address</string>
    <string name="HomeActivity">TextView</string>
    <string name="update">Update</string>

</resources>
