<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <Button
        android:id="@+id/ApplianceButton"
        android:layout_width="231dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:text="@string/view_appliances" />

    <Button
        android:id="@+id/ManageAcctButton"
        android:layout_width="231dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/manage_account" />

    <Button
        android:id="@+id/LogoutButton"
        android:layout_width="231dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/log_out" />


</LinearLayout>