<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Appliance_List">

    <TextView
        android:id="@+id/bed1"
        android:layout_width="119dp"
        android:layout_height="23dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/textview"
        app:layout_constraintBottom_toTopOf="@+id/officelights"
        app:layout_constraintEnd_toStartOf="@+id/fridgeswitch"
        app:layout_constraintHorizontal_bias="0.412"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fridgetextView"
        app:layout_constraintVertical_bias="0.173"
        tools:text="Spare Bed" />

    <Switch
        android:id="@+id/livinglights4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/livingswitch"
        app:layout_constraintBottom_toTopOf="@+id/officelight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.593"
        app:layout_constraintStart_toEndOf="@+id/livingroomlights"
        app:layout_constraintTop_toBottomOf="@+id/fridgeswitch"
        app:layout_constraintVertical_bias="0.21"
        tools:text="on/off" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="136dp"
        android:layout_marginRight="136dp"
        android:layout_marginBottom="16dp"
        android:text="@string/go_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.98"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AppliancetextView"
        app:layout_constraintVertical_bias="0.943" />

    <TextView
        android:id="@+id/masterbed"
        android:layout_width="119dp"
        android:layout_height="23dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/textview"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/back"
        app:layout_constraintEnd_toStartOf="@+id/masterlight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/officelights"
        tools:text="Master Room Lights" />

    <Switch
        android:id="@+id/masterlight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/masterswitch"
        app:layout_constraintBottom_toTopOf="@+id/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/masterbed"
        app:layout_constraintTop_toBottomOf="@+id/officelight"
        tools:text="on/off" />

    <TextView
        android:id="@+id/officelights"
        android:layout_width="119dp"
        android:layout_height="23dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:text="@string/textview"
        app:layout_constraintEnd_toStartOf="@+id/officelight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bed1"
        tools:text="Office Lights" />

    <Switch
        android:id="@+id/officelight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/officeswitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/officelights"
        app:layout_constraintTop_toBottomOf="@+id/livinglights4"
        tools:text="on/off" />

    <TextView
        android:id="@+id/livingroomlights"
        android:layout_width="119dp"
        android:layout_height="23dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:text="@string/textview"
        app:layout_constraintEnd_toStartOf="@+id/fridgeswitch"
        app:layout_constraintHorizontal_bias="0.412"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fridgetextView"
        tools:text="Living Room Lights" />

    <Switch
        android:id="@+id/livinglights"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/livingswitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.593"
        app:layout_constraintStart_toEndOf="@+id/livingroomlights"
        app:layout_constraintTop_toBottomOf="@+id/fridgeswitch"
        tools:text="on/off" />

    <TextView
        android:id="@+id/AppliancetextView"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/textview"
        app:layout_constraintBottom_toTopOf="@+id/WashertextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Appliance List" />

    <TextView
        android:id="@+id/WashertextView"
        android:layout_width="119dp"
        android:layout_height="23dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:text="@string/textview"
        app:layout_constraintEnd_toStartOf="@+id/washerswitch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AppliancetextView"
        tools:text="Washer" />

    <TextView
        android:id="@+id/fridgetextView"
        android:layout_width="119dp"
        android:layout_height="23dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:text="@string/textview"
        app:layout_constraintEnd_toStartOf="@+id/fridgeswitch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dryertextView"
        tools:text="Refrigerator" />

    <TextView
        android:id="@+id/dryertextView"
        android:layout_width="119dp"
        android:layout_height="23dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:text="@string/textview"
        app:layout_constraintEnd_toStartOf="@+id/dryerswitch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WashertextView"
        tools:text="Dryer" />

    <Switch
        android:id="@+id/washerswitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/washerswitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/WashertextView"
        app:layout_constraintTop_toBottomOf="@+id/AppliancetextView"
        tools:text="on/off" />

    <Switch
        android:id="@+id/fridgeswitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/fridgeswitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fridgetextView"
        app:layout_constraintTop_toBottomOf="@+id/dryerswitch"
        tools:text="on/off" />

    <Switch
        android:id="@+id/dryerswitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/dryerswitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dryertextView"
        app:layout_constraintTop_toBottomOf="@+id/washerswitch"
        tools:text="on/off" />
</android.support.constraint.ConstraintLayout>